<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/history_title"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Thanh Tab -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_chip_gray"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/tabUpcoming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_card_info_item"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/tab_upcoming"
            android:textColor="#333333"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tabHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/tab_history"
            android:textColor="#757575"
            android:textStyle="normal" />
    </LinearLayout>

    <!-- Danh sách -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvBookingHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="8dp"
        android:paddingBottom="16dp"
        android:clipToPadding="false"/>
</LinearLayout>